# image_processing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.git-old/: COMMIT_EDITMSG  ORIG_HEAD  config  index
.git-old/logs/: HEAD
.git-old/logs/refs/: stash
.git-old/logs/refs/heads/: master
.git-old/logs/refs/remotes/origin/: master
.git-old/refs/: stash
.git-old/refs/heads/: master
interface/: control_panel.cpp
interface/image/: control_panel.cpp
trabalho1/: CMakeLists.txt  main.cpp
trabalho2/: CMakeLists.txt  main.cpp
trabalho2/image_processing/: image_processing.cpp  image_processing.h
trabalho2/interface/: control_panel.cpp  image_panel.cpp  interface.cpp  interface.h  main_window.cpp
trabalho3/: CMakeLists.txt  README.md  main.cpp
trabalho3/core/: video_processor.cpp  video_processor.h
trabalho3/interface/: command_interface.cpp  command_interface.h  interface.cpp  interface.h  main_window.cpp
trabalho3/interface/image/: control_panel.cpp  control_panel.h  image_panel.cpp  image_panel.h
